2002-04-14  Abigail Brady  <morwen@evilmagic.org>

	* configure.in: Added en_GB.

2002-04-09  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* libgnomeui/gnome-dateedit.c: (gnome_date_edit_class_init): Removed
	unused widget_class variable.

2002-04-08  Wayne Schuller  <k_wayne@linuxpower.org>
 
 	* libgnomeui/gnome-file-entry.c: (gnome_file_entry_init): 
	Give the browse button an accelerator. Fixes #77416

2002-04-08  Wayne Schuller  <k_wayne@linuxpower.org>

	* libgnomeui/gnome-entry.c: (gnome_entry_load_history): 
	Free the key. http://bugzilla.gnome.org/show_bug.cgi?id=74788

2002-04-04  jacob berkman  <jacob@ximian.com>

	* libgnomeui/gnome-app-helper.c (create_help_entries): just create
	1 entry which shows the table on contents
	(help_view_display_callback): display our help file
	(quote_string):
	(get_toc_location):
	(get_best_toc_location):
	(get_topics): kill unused functions

	fixes #73312, based on patch from Satyajit Kanungo
	<satyajit.kanungo@wipro.com>
	
2002-04-04  Anders Carlsson  <andersca@gnu.org>

	* libgnomeui/gnome-icon-sel.c: Remove debugging output.

2002-04-03  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>

	* configure.in (ALL_LINGUAS): Added pt_BR.

2002-03-30  Anders Carlsson  <andersca@gnu.org>

	* Release 1.114.0

2002-03-29  Mark McLoughlin  <mark@skynet.ie>

	* libgnomeui/gnome-pixmap-entry.c:
	(gnome_pixmap_entry_class_init): set the property methods
	before installing properties to avoid warnings.

2002-03-25  jacob berkman  <jacob@ximian.com>

	* libgnomeui/gnome-gconf-ui.c: (error_idle_func): set the default
	reponse for the dialog and add a bevel around the TextView

2002-03-22  Richard Hult  <rhult@codefactory.se>
 
 	* libgnomeui/gnome-dateedit.c (gnome_date_edit_class_init):
 	Override grab_focus.
 	(grab_focus): Grab focus on the entry.
 	(gnome_date_edit_instance_init): Set GTK_CAN_FOCUS flag. These
 	changes make GnomeDateEdit work as a target for mnemonic
 	activation.

2002-03-22  Havoc Pennington  <hp@pobox.com>
