@@ -1,3 +1,9 @@
+2002-04-15  Richard Hult  <rhult@codefactory.se>
+
+	* libgnomeui/gnome-href.c (gnome_href_style_set): Remove debug
+	output.
+	(gnome_href_clicked): Destroy the dialog after it's dismissed.
+
 2002-04-14  Abigail Brady  <morwen@evilmagic.org>
 
 	* configure.in: Added en_GB.
